enabled the addition of blog posts dynamically

--- a/src/index.css
+++ b/src/index.css
@@ -80,7 +80,7 @@ body{
     width: 100%;
 }
 footer{
-    position: fixed;
+    /* position: fixed; */
     bottom: 0;
     width: 100%;
     background-color: skyblue;
